Made mistake writing down equation for R(z) in cell 4

--- a/code/mode_matching_tools/mode_overlap_calculation.ipynb
+++ b/code/mode_matching_tools/mode_overlap_calculation.ipynb
@@ -40,7 +40,7 @@
     "* $W(z)$ is the beam size as a function of z:\n",
     "$W_(z) = W_o \\sqrt{(1 + \\frac{z}{z_r})}$ (where z_r is the rayleigh length)\n",
     "* $\\rho(x,y) = \\sqrt{x^2 + y^2}$ \n",
-    "* $R(z) = z(1 + \\frac{z_r}{z})$ is the radius of curvature of the the wavefront\n",
+    "* $R(z) = z(1 + (\\frac{z_r}{z})^2)$ is the radius of curvature of the the wavefront\n",
     "* $\\zeta(z)$ = tan$^{-1}(\\frac{z}{z_r})$ is the gouy phase"
    ]
   },
