Changed some of the markdown notes

--- a/code/lab_tools/beam_scan_fitting.ipynb
+++ b/code/lab_tools/beam_scan_fitting.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Beam scan plotting and fitting code (Data measured from WinCamD)"
+    "# Beam scan plotting and fitting script (Data measured from WinCamD)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This code makes some assumptions about a few things:\n",
+    "### This script makes some assumptions about a few things:\n",
     " - Assumes some well established reference point from which you are measuring\n",
     " - Assumes the distance incrementation along z is in inches\n",
     " - Assumes you want to know about waist size and waist position"
