Fixes to beam scan fittings script
* Directory it searches for the .xlsx file was incorrect so I updated it
* Changed the y-axis label from beam radius to beam size

--- a/code/lab_tools/beam_scan_fitting.ipynb
+++ b/code/lab_tools/beam_scan_fitting.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,18 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "fname = 'BS_10_24_2019'\n",
-    "data = pd.read_excel('../measurements/'+f_name+'.xlsx')\n",
+    "data = pd.read_excel('../../measurements/'+fname+'.xlsx')\n",
     "data_np = np.array(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "       [21, 761.3, 980.8]], dtype=object)"
       ]
      },
-     "execution_count": 425,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "             x: array([2.32757703e-04, 3.38113093e-01])"
       ]
      },
-     "execution_count": 430,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "             x: array([1.36934639e-04, 3.44047223e-01])"
       ]
      },
-     "execution_count": 432,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
     "plt.plot(z_met,rad_x,'o', label='horizontal measurement')\n",
     "plt.plot(z_met,rad_y,'o', label='vertical measurement')\n",
     "plt.legend(fontsize='x-large')\n",
-    "plt.ylabel('Beam radius W(z) [m]',fontsize=20)\n",
+    "plt.ylabel('Beam size W(z) [m]',fontsize=20)\n",
     "plt.xlabel('z [m]',fontsize=20)\n",
     "#plt.grid('True', which='both')\n",
     "plt.grid('True')\n",
