Changed an incorrect comment in cell 8

--- a/code/lab_tools/beam_scan_fitting.ipynb
+++ b/code/lab_tools/beam_scan_fitting.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Function that outputs the variance of the beam size function to the measured data\n",
+    "## Function that outputs RMS error between W(z) (with a guessed waist size and waist position) to the measured data\n",
     "def int_w_z(params,wavelen, w_data, z_data):\n",
     "    w0 = params[0]\n",
     "    z0 = params[1]\n",
