Adding simple experiment schematic and calibration math to pockels_calibration.ipynb

--- a/code/notebooks/pockels_calibration/pockels_calibration.ipynb
+++ b/code/notebooks/pockels_calibration/pockels_calibration.ipynb
@@ -11,30 +11,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Two types of data inputs you wish to calibrate (Noise measurements and transfer function measurements)"
+    "## Frequency dependent measurement : $\\alpha(f)$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Noise measurement / Single frequency drive measurement"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# schema figure"
+    "<img src=\"figures/algaas_pockels_swept_sine.png\" width=\"1000\" height=\"900\" align=\"center\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Frequency dependent drive "
+    "The calibration math for this measurement explicitly starts with what I call $\\alpha(f,\\theta)$ which is a vector of complex numbers that represents the transfer function $\\mathrm{CH2}(f)/\\mathrm{CH1}(f)$ where:\n",
+    "\n",
+    "$$\\mathrm{CH1}(f) = \\mathrm{Source}(f)$$ and $$\\mathrm{CH2}(f) = (\\mathrm{S}(f)* signal(f))/(1-\\mathrm{OLG}(f))$$ \n",
+    "\n",
+    "Where $$\\mathrm{OLG}(f) = \\mathrm{A}(f)* \\mathrm{S}(f)$$ \n",
+    "\n",
+    "and $signal(f)$ is the demodulated output from $\\mathrm{RFPD}_\\mathrm{refl}$ and $\\mathrm{S}(f)$ is the transfer function of the <a href=\"https://sugwg-alog.phy.syr.edu/aLOG/index.php?callRep=815\">frequency stabilization servo</a>.\n",
+    "\n",
+    "From here we solve for signal(f):\n",
+    "\n",
+    "$$signal(f) = \\mathrm{CH2}(f) * \\mathrm{A}_{1}(f) * \\mathrm{A}_2* \\frac{(1-\\mathrm{OLG}(f))}{\\mathrm{OLG}(f)}$$\n",
+    "\n",
+    "Where $\\mathrm{A}_{1}(f)$ informs the frequency dependent drive sent to the laser PZT to keep the cavity locked and $\\mathrm{A}_2$ is the laser frequency detuning factor [Hz/V] (can be estimated from <a href=\"https://sugwg-alog.phy.syr.edu/aLOG/index.php?callRep=831\">measuring PDH</a>).\n",
+    "\n",
+    "\n",
+    "Currently $signal(f)$ provides a frequency noise spectra which then can be converted into a displacement spectra with the following relation:\n",
+    "\n",
+    "$$\\frac{\\Delta f}{f_\\mathrm{laser}} = \\frac{\\Delta L}{L_\\mathrm{cav}}$$\n",
+    "\n",
+    "This allows us to imagine the frequency noise spectra as a length noise spectra due to the drive on the electrodes:\n",
+    "\n",
+    "$$signal(f) = \\mathrm{CH2}(f) * \\mathrm{A}_{1}(f) * \\mathrm{A}_2* \\frac{(1-\\mathrm{OLG}(f))}{\\mathrm{OLG}(f)} * \\frac{L_\\mathrm{cav}}{f_\\mathrm{laser}}$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Noise or single frequency drive measurement : $n(f)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/algaas_pockels_single_frequency_calib.png\" width=\"1000\" height=\"900\" align=\"center\"/>"
    ]
   },
   {
@@ -42,9 +76,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# schema figure"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
