Forgot to add \alpha(f) in the final two equations of the swept sine measurement calibration math

--- a/code/notebooks/pockels_calibration/pockels_calibration.ipynb
+++ b/code/notebooks/pockels_calibration/pockels_calibration.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The calibration math for this measurement explicitly starts with what I call $\\alpha(f,\\theta)$ which is a vector of complex numbers that represents the transfer function $\\mathrm{CH2}(f)/\\mathrm{CH1}(f)$ where:\n",
+    "The calibration math for this measurement explicitly starts with what I call $\\alpha(f)$ which is a vector of complex numbers that represents the transfer function $\\mathrm{CH2}(f)/\\mathrm{CH1}(f)$ where:\n",
     "\n",
     "$$\\mathrm{CH1}(f) = \\mathrm{Source}(f)$$ and $$\\mathrm{CH2}(f) = (\\mathrm{S}(f)* signal(f))/(1-\\mathrm{OLG}(f))$$ \n",
     "\n",
@@ -46,11 +46,11 @@
     "\n",
     "This allows us to imagine the frequency noise spectra as a length noise spectra due to the drive on the electrodes:\n",
     "\n",
-    "$$signal(f) = \\mathrm{CH2}(f) * \\mathrm{A}_{1}(f) * \\mathrm{A}_2* \\frac{(1-\\mathrm{OLG}(f))}{\\mathrm{OLG}(f)} * \\frac{L_\\mathrm{cav}}{f_\\mathrm{laser}}\\hspace{35pt} [m_\\mathrm{pk}]$$\n",
+    "$$signal(f) = \\alpha(f)* \\mathrm{Source}(f) * \\mathrm{A}_{1}(f) * \\mathrm{A}_2* \\frac{(1-\\mathrm{OLG}(f))}{\\mathrm{OLG}(f)} * \\frac{L_\\mathrm{cav}}{f_\\mathrm{laser}}\\hspace{35pt} [m_\\mathrm{pk}]$$\n",
     "\n",
     "And for the measurement normalized by the drive voltage on the electrodes:\n",
     "\n",
-    "$$\\frac{signal(f)}{\\mathrm{Source}(f) * \\mathrm{G}(f)} = \\frac{\\mathrm{CH2}(f)}{\\mathrm{Source}(f) * \\mathrm{G}(f)} * \\mathrm{A}_{1}(f) * \\mathrm{A}_2* \\frac{(1-\\mathrm{OLG}(f))}{\\mathrm{OLG}(f)} * \\frac{L_\\mathrm{cav}}{f_\\mathrm{laser}}\\hspace{35pt} \\bigg[\\frac{m_\\mathrm{pk}}{V_\\mathrm{pk}}\\bigg]$$\n",
+    "$$\\frac{signal(f)}{\\mathrm{Source}(f) * \\mathrm{G}(f)} = \\frac{\\alpha(f)}{\\mathrm{G}(f)} * \\mathrm{A}_{1}(f) * \\mathrm{A}_2* \\frac{(1-\\mathrm{OLG}(f))}{\\mathrm{OLG}(f)} * \\frac{L_\\mathrm{cav}}{f_\\mathrm{laser}}\\hspace{35pt} \\bigg[\\frac{m_\\mathrm{pk}}{V_\\mathrm{pk}}\\bigg]$$\n",
     "\n",
     "\n",
     "\n",
