Added math for noise / single frequency drive measurements and added title separating the calibration code section

--- a/code/notebooks/pockels_calibration/pockels_calibration.ipynb
+++ b/code/notebooks/pockels_calibration/pockels_calibration.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "The calibration math for this measurement explicitly starts with what I call $\\alpha(f)$ which is a vector of complex numbers that represents the transfer function $\\mathrm{CH2}(f)/\\mathrm{CH1}(f)$ where:\n",
     "\n",
-    "$$\\mathrm{CH1}(f) = \\mathrm{Source}(f)$$ and $$\\mathrm{CH2}(f) = (\\mathrm{S}(f)* signal(f))/(1-\\mathrm{OLG}(f))$$ \n",
+    "$$\\mathrm{CH1}(f) = \\mathrm{Source}(f)$$ and $$\\mathrm{CH2}(f) = \\frac{\\mathrm{S}(f)* signal(f)}{1-\\mathrm{OLG}(f)}$$ \n",
     "\n",
     "Where $$\\mathrm{OLG}(f) = \\mathrm{A}(f)* \\mathrm{S}(f)$$ \n",
     "\n",
@@ -50,14 +50,7 @@
     "\n",
     "And for the measurement normalized by the drive voltage on the electrodes:\n",
     "\n",
-    "$$\\frac{signal(f)}{\\mathrm{Source}(f) * \\mathrm{G}(f)} = \\frac{\\alpha(f)}{\\mathrm{G}(f)} * \\mathrm{A}_{1}(f) * \\mathrm{A}_2* \\frac{(1-\\mathrm{OLG}(f))}{\\mathrm{OLG}(f)} * \\frac{L_\\mathrm{cav}}{f_\\mathrm{laser}}\\hspace{35pt} \\bigg[\\frac{m_\\mathrm{pk}}{V_\\mathrm{pk}}\\bigg]$$\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "$$\\frac{signal(f)}{\\mathrm{Source}(f) * \\mathrm{G}(f)} = \\frac{\\alpha(f)}{\\mathrm{G}(f)} * \\mathrm{A}_{1}(f) * \\mathrm{A}_2* \\frac{(1-\\mathrm{OLG}(f))}{\\mathrm{OLG}(f)} * \\frac{L_\\mathrm{cav}}{f_\\mathrm{laser}}\\hspace{35pt} \\bigg[\\frac{m_\\mathrm{pk}}{V_\\mathrm{pk}}\\bigg]$$\n"
    ]
   },
   {
@@ -75,16 +68,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The calibration math for this measurement is essentially equivalent to the transfer function measurement above. The only difference is:\n",
+    "\n",
+    "$$\\mathrm{CH1}(f) = \\frac{\\mathrm{S}(f)* signal(f)}{1-\\mathrm{OLG}(f)}$$ \n",
+    "\n",
+    "and \n",
+    "\n",
+    "$$signal(f) = \\mathrm{CH1}(f) * \\mathrm{A}_{1}(f) * \\mathrm{A}_2* \\frac{(1-\\mathrm{OLG}(f))}{\\mathrm{OLG}(f)} * \\frac{L_\\mathrm{cav}}{f_\\mathrm{laser}}$$\n",
+    "\n",
+    "Where $signal(f)$ in this measurement represents the free running cavity displacement noise with the exception of a single frequency if it is not a noise measurement.\n",
+    "\n",
+    "If $\\mathrm{CH1}(f)$ is in $\\frac{V_\\mathrm{rms}}{\\sqrt{Hz}}$ then signal(f) will be in $\\frac{m_\\mathrm{rms}}{\\sqrt{Hz}}$\n",
+    "\n",
+    "or \n",
+    "\n",
+    "If $\\mathrm{CH1}(f)$ is in $V_\\mathrm{pk}$ then signal(f) will be in $m_\\mathrm{pk}$\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Calibration code\n",
+    "\n",
     "### Import packages\n",
     "If it fails the first time try installing the following to a separate conda enviornment:  <span style=\"color:red\">/pydependencies/eo_calibrate.yml</span> "
    ]
